[package]
name = "conrod_vki"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"

[dependencies]
conrod_core = { version = "0.65.0" }
memoffset = "0.3.0"
vki = { git = "https://github.com/aloucks/vki.git", rev = "393fa74", default-features = false }

[dev-dependencies]
winit = "0.19.1"
pretty_env_logger = "0.3.0"
